Change Comrade model to have a OneToOneField instead of subclassing User.
Update the Django admin to have the User display Comrade information
inline, add Comrade form template, and ensure that user registration
automatically takes the person to the next page to add Comrade info.

--- a/home/templates/home/comrade_form.html
+++ b/home/templates/home/comrade_form.html
@@ -5,9 +5,8 @@
 <form method="post" action="">
 {% csrf_token %}
     {{ form }}
-<input type="submit" value="Create Account" />
+<input type="submit" value="Save" />
 <input type="hidden" name="next" value="{{ next }}" />
-<p>Already have an account? <a href="{% url 'login' %}?next={{ next|urlencode }}">Login.</a></p>
 </form>
 
 {% endblock %}
