Upgrade Bootstrap from 2.3.2 to 4.0.0-beta.3.
This may leave some things poorly styled that were working before, but
it fixes a number of things that looked awful before, and it should be
more maintainable going forward.

--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -30,7 +30,7 @@ Volunteers can be granted read access to all applications to help out with revie
 <h2>Community Information</h2>
 <form action="" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <br>
     <input class="btn btn-primary" type="submit" value="Submit Community For Review" />
 </form>
