--- a/home/templates/home/project_form.html
+++ b/home/templates/home/project_form.html
@@ -8,7 +8,7 @@
 
 <form action="" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <br>
     <input class="btn btn-primary" type="submit" value="Save project info" />
 </form>
