--- a/home/templates/registration/registration_form.html
+++ b/home/templates/registration/registration_form.html
@@ -4,10 +4,10 @@
 
 <form method="post" action="">
 {% csrf_token %}
-    {{ form }}
-<input type="submit" value="Create Account" />
+    {{ form.as_p }}
+<input type="submit" class="btn btn-block btn-primary" value="Create Account" />
 <input type="hidden" name="next" value="{{ next }}" />
-<p>Already have an account? <a href="{% url 'login' %}?next={{ next|urlencode }}">Login.</a></p>
+<p>Already have an account? <a href="{% url 'login' %}?next={{ next|urlencode }}" class="btn btn-secondary">Login.</a></p>
 </form>
 
 {% endblock %}
