--- a/home/templates/home/comrade_form.html
+++ b/home/templates/home/comrade_form.html
@@ -4,8 +4,8 @@
 
 <form method="post" action="">
 {% csrf_token %}
-    {{ form }}
-<input type="submit" value="Save" />
+    {{ form.as_p }}
+<input type="submit" class="btn btn-block btn-primary" value="Save" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
